# oop-Otto-Wolf

./: 12lab.py
14labka/PythonProject/: 1.py  README.md  example.py  pyproject.toml
14labka/PythonProject/student_utils/: __init__.py  helpers.py  math_tools.py
14labka/PythonProject/student_utils.egg-info/: PKG-INFO  SOURCES.txt
14labka/PythonProject/student_utils/student_utils.egg-info/: PKG-INFO
15 lab/: 1task.py  2task.py  3task.py  4task.py  5task.py
2labka/: 2lab.py
4labka/: 3lab.py
5 labka/: 5lab.py
6labka 9 variant/: 6 labka 2.py  6lab.py
lab10/: lab10 task 1.py  lab10 task2.py  tanks.txt  task3.py  task4.py
lab11/: task1.py  task2.py  task3.py  task4.py
lab13/: desktop.ini
woi/WOI/: manage.py
woi/WOI/WOI/: asgi.py  settings.py  wsgi.py
woi/WOI/main/: views.py
