[project]
name = "student_utils"
version = "0.1.0"
description = "Simple utility package for lab work"
authors = [{name = "Otto", email = "otto0@example.com"}]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["student_utils"]
